versioned_docs/version-2.5.x/3_highlights/10_type_conversion.mdx
---
sidebar_position: 10
---

# Type Conversion

This page discusses how FirelordJS transforms your types for various uses internally.

Type transformation is needed because read(output), write(input) and compare(query) require different data types.

## Conversion Table

| Base                                                             | Read                                      | Write                                                                                 | Compare                                   |
| ---------------------------------------------------------------- | ----------------------------------------- | ------------------------------------------------------------------------------------- | ----------------------------------------- |
| `number`                                                         | `number`                                  | `number` \| `Increment`                                                               | `number`                                  |
| `numeric literal`                                                | `numeric literal`                         | `numeric literal`                                                                     | `numeric literal`                         |
| `string`                                                         | `string`                                  | `string`                                                                              | `string`                                  |
| `string literal`                                                 | `string literal`                          | `string literal`                                                                      | `string literal`                          |
| `null`                                                           | `null`                                    | `null`                                                                                | `null`                                    |
| `Timestamp` \| `Date`                                            | `Timestamp`                               | `Timestamp` \| `Date`                                                                 | `Timestamp` \| `Date`                     |
| `ServerTimestamp`                                                | `Timestamp`(see point 4)                  | `ServerTimestamp`                                                                     | `Timestamp` \| `Date`                     |
| `T[]`                                                            | `RecursivelyConverted<T>[]`               | `readonly RecursivelyConverted<T>[]` \| `ArrayUnionOrRemove<RecursivelyConverted<T>>` | `readonly RecursivelyConverted<T>[]`      |
| `GeoPoint`                                                       | `GeoPoint`                                | `GeoPoint`                                                                            | `GeoPoint`                                |
| `DocumentReference<M>`                                           | `DocumentReference<M>`                    | `DocumentReference<M>`                                                                | `DocumentReference<M>`                    |
| [`DeleteField`](./guides/delete_field)                           | `undefined`                               | `never` for set, add and create. `DeleteField` for update and set merge               | `never`                                   |
| [`PossiblyReadAsUndefined`](./guides/possibly_read_as_undefined) | `undefined`                               | `never`                                                                               | `never`                                   |
| `Record<string, T>`                                              | `Record<string, RecursivelyConverted<T>>` | `Record<string, RecursivelyConverted<T>>`                                             | `Record<string, RecursivelyConverted<T>>` |

Internally, FirelordJS converts base type into 3 main types for different purpose:

- Read type for output of `getDoc`, `getDocs`, `onSnapshot` and etc.
- Write type for input of `setDoc`, `updateDoc`, `addDoc`, `createDoc`(admin) and etc.
- Compare type for query clauses like `where`, `orderBy` and etc.

The main types are further transformed for even more specific use cases internally.

Key Points:

1. FirelordJS forbids you from increasing `numeric literal` type data with `increment`.

2. FirelordJS forbids you from writing `Date` or `Timestamp` into `ServerTimestamp`, because some date time **has to be** server timestamp, such as `createdAt` and `updatedAt`. However if this is your intention, please union `ServerTimestamp` with `Date` and `Timestamp`.

3. We can always compare `Date` or `Timestamp` to `ServerTimestamp`.

4. Firestore need time to resolve sever time stamp, so it is possible to retrieve a null value if we read the value immediately after we write it. However this is a very rare case. For smoother coding experience, I decided not to union Server Timestamp read type(Timestamp) with null anymore, users no longer need to check for `null`. Users can union ServerTimestamp with null in Meta Type to deal with edge case.
